kubernetes/crossbar.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: crossbar
    name: crossbar
  name: crossbar
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: crossbar
    spec:
      containers:
      - name: crossbar
        image: crossbario/crossbar
        imagePullPolicy: Always
        volumeMounts:
        - name: crossbar-config
          mountPath: /node/.crossbar/
        resources:
          limits:
            cpu: 50m
            memory: 200Mi
          requests:
            cpu: 25m
            memory: 100Mi
      volumes:
      - name: crossbar-config
        configMap:
          name: crossbar-config
