kubernetes/eve-frontend.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eve-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: eve-frontend
    spec:
      containers:
      - name: eve-frontend
        image: gcr.io/eve-prod/eve_master
        imagePullPolicy: Always
        command:
#        - '/bin/sleep'
        - '/root/eve/docker_cmd.py'
        args:
#        - 'infinity'
        - $(DB_URL)
        - $(WAMP_ROUTER_URL)
        livenessProbe:
          httpGet:
            path: /
            port: buildbot-ui
          initialDelaySeconds: 120
          periodSeconds: 20
        resources:
          limits:
            cpu: 50m
            memory: 200Mi
          requests:
            cpu: 25m
            memory: 100Mi
        ports:
        - containerPort: 8010
          name: buildbot-ui
          protocol: TCP
